# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-controller.sh:
  Removing an extra env-update call from stage1's preclean.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/cdtar/grub-memtest86+-cdtar.tar.bz2,
  targets/support/bootloader-setup.sh:
  Set default for grub to 0 and updated cdtar so we don't ship a half-broken
  help.msg which we didn't even use.

  28 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/bootloader-setup.sh:
  Don't write out out 'default 1' line when creating grub.conf, since the
  'help' entry is now at the bottom, and we want grub to default to the first
  entry

  27 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/bootloader-setup.sh:
  Removed checks on livecd/splash_type, since we only support one type,
  removed remaining bootsplash code from bootloader-setup.sh, added automatic
  copying of splash.xpm.gz for Gentoo releases when using grub, and moved grub
  help to bottom of titles. This is catalyst 2.0.6_pre10 for testing.

  27 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage2/livecd-stage2-controller.sh:
  Let's automatically copy in the snapshot if livecd/type is
  gentoo-release-livecd.

  26 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  modules/generic_stage_target.py:
  Fix leading whitespace in empty() so it's only executed if there's something
  to execute it on. Thanks to Justin Bronder <jsbronder@gentoo.org> in bug
  211410 for pointing this out

  21 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/rc-update.sh:
  Quote baselayout package atom

  21 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/chroot-functions.sh:
  OK, we shouldn't use which to find env-update, since /usr/sbin isn't in the
  PATH by default. Instead, simply check if it exists.
