@@ -3,7 +3,7 @@
 source /tmp/chroot-functions.sh
 
 ## START BUILD
-setup_portage
+setup_pkgmgr
 
 unset DISTDIR
 
