@@ -2,6 +2,14 @@
 # $Id: $
 
   28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/grp/grp-chroot.sh, targets/livecd-stage1/livecd-stage1-chroot.sh,
+  targets/stage1/stage1-chroot.sh, targets/stage3/stage3-chroot.sh,
+  targets/stage4/stage4-chroot.sh, targets/support/chroot-functions.sh,
+  targets/tinderbox/tinderbox-chroot.sh:
+  Rearrange some of the functions in chroot-functions.sh in preparation for
+  some upcoming changes and rename setup_portage to setup_pkgmgr.
+
+  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/stage1/stage1-controller.sh:
   Removing an extra env-update call from stage1's preclean.
 
